# FastAPI-example

./: .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt  run.py
app/: .env  Dockerfile  pyproject.toml  requirements.txt
app/src/: config.py  database.py  dependencies.py  main.py
app/src/auth/: services.py
app/src/inventory/: models.py  router.py  services.py
app/static/css/: styles.css
app/static/js/: utils.js
app/templates/: footer.html  login.html
app/templates/inventory/: datatable.html  inventory.html
db/: db.env
src/: config.py  database.py  dependencies.py  init.py  local.env  main.py
src/auth/: models.py  router.py  services.py
src/inventory/: utils.py
src/rents/: models.py  router.py  services.py
static/js/: inventory.js  rents.js
templates/: 401.html  base.html  expired.html  home.html
templates/rents/: datatable.html  rents.html
